# rus_sim1.0

./: .gitignore  README.md
ct2us/im2im/: simulate_us_from_ct.ipynb  train.py
ct2us/im2im/unet/: model.py
ct2us/im2im/utils/: evaluate.py  predict.py  vis.py
ct2us/utils/: CTDataManager.m  ContrastEnhance.m  EdgeEnhance.m  GetScatterImage.m  GetSimUS.m  ShowUS.m  resize.m
rus_panda_description/: CMakeLists.txt  package.xml
rus_panda_description/meshes/collision/: asee2.stl
rus_panda_description/meshes/visual/: asee2_monocolor.dae
rus_panda_description/robots/common/: asee1.urdf.xacro  asee2.urdf.xacro  franka_arm.xacro  franka_asee1.xacro  franka_asee2.xacro  franka_hand.xacro  franka_robot.xacro  inertial.yaml  utils.xacro
rus_panda_description/robots/fr3/: fr3.urdf.xacro
rus_panda_description/robots/panda/: panda.urdf.xacro
rus_sim/: CMakeLists.txt  package.xml
rus_sim/include/: patientContactPlugin.hh
rus_sim/launch/: rus_sim.launch  sim_us_from_ct.launch  teleop_haptics.launch
rus_sim/launch/rviz/: franka_description_with_marker.rviz
rus_sim/models/exam_bed/: model.config  model.dae  model.sdf
rus_sim/models/patient/: model.STL  model.config  model.sdf
rus_sim/models/patient_CT/: model.config  model.sdf
rus_sim/models/robot_cart/: model.config  model.dae  model.sdf
rus_sim/scripts/: asee1_panda_bridge.py  detect_contact.py  interactive_marker.py  oblique_slice_ct.py  simulate_us.py  teleop_haptics.py  test_control.py  verify_normal_estimate.py
rus_sim/src/: patientContactPlugin.cc
rus_sim/worlds/: rus_scene.sdf
